[tool.poetry]
name = "wazcounter"
version = "0.1.0"
description = "calculate number words in a text files"
authors = ["Ibrahim Zubairu Waziri"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
